# aws-sns-verifier

./: README.md  pyproject.toml
.cursor/rules/: aws-sns-patterns.mdc  project-structure.mdc  pydantic-models.mdc  python-conventions.mdc
.github/workflows/: publish.yml
src/aws_sns_verifier/: __init__.py  attachments.py  models.py  validator.py
tests/: conftest.py  data.json  msg.json  test_main.py
