[project]
name = "aws-sns-verifier"
version = "0.1.1"
description = "AWS SNS Verifier"
readme = "README.md"
authors = [{ name = "yagizklc", email = "yagizkilicarslan1@gmail.com" }]
requires-python = ">=3.10"
dependencies = ["cryptography>=45.0.5", "pydantic>=2.11.7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
