[project]
name = "aws-sns-verifier"
version = "0.1.5"
description = "AWS SNS Verifier"
readme = "README.md"
authors = [{ name = "yagizklc", email = "yagizkilicarslan1@gmail.com" }]
requires-python = ">=3.10"
dependencies = ["boto3>=1.40.1", "cryptography>=45.0.5", "pydantic>=2.11.7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["boto3-stubs[s3]>=1.40.1"]
