[project]
name = "aws-sns-verifier"
version = "0.1.14"
description = "AWS SNS Verifier"
readme = "README.md"
authors = [{ name = "yagizklc", email = "yagizkilicarslan1@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.40.1",
    "cryptography>=45.0.5",
    "logfire-api>=4.0.1",
    "pydantic>=2.11.7",
]


[dependency-groups]
dev = ["boto3-stubs[s3]>=1.40.1", "pytest>=8.4.1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
